src/objects/Case_Lot_NumberDetail__c.object
<CustomObject>
    <fields>
        <fullName>BulkNumber__c</fullName>
        <label>Bulk Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry__c</fullName>
        <label>Inquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Lot_NumberDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LotNumber__c</fullName>
        <label>Lot Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufacturingSite__c</fullName>
        <label>Lot Manufacturing Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackagingSite__c</fullName>
        <label>Lot Packaging Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Case_Lot_NumberDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Lot Detail</label>
    <nameField>
        <displayFormat>CaseLot-{00000}</displayFormat>
        <label>Case Lot NumberDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Lot Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>